--- a/Hoja3.html
+++ b/Hoja3.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="CSS/Hoja3_css.css" type="text/css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
 </head>
 <body>
-	<h3>CAMISETA BARCELONA</h3>
-	<img src="imagenes/barcelona.jpg"><br>
-	<strong>Descripcion</strong><br>
-	<i>El diseño está inspirado en Barcelona como sede de los Juegos Olímpicos. Pues, según destaca el club, se trató de un año emblemático, que trazó la trayectoria deportiva de la ciudad frente al mundo.</i>
-	<footer><br>
-		<a href="\PracticaHTML\Hoja1.html">Hoja1</a>&nbsp;
-		<a href="\PracticaHTML\Hoja2.html">Hoja2</a>&nbsp;
-		<a href="\PracticaHTML\Hoja4.html">Hoja4</a>&nbsp;
-		<a href="\PracticaHTML\Hoja5.html">Hoja5</a>&nbsp;
-	</footer>
+	<ul id="cabecera">
+		<li class="boton-menu"><a class="menu" href="Hoja1.html">FORMULARIO</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja2.html">TABLA</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu active" href="Hoja3.html">BARCELONA</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja4.html">LEVANTE UD</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja5.html">ELCHE</a>&nbsp;</li>
+	</ul>
+	<div class="contenedor-pag">
+		<h3>CAMISETA BARCELONA</h3>
+		<img src="imagenes/barcelona.jpg"><br>
+		<strong>Descripcion</strong><br>
+		<i>El diseño está inspirado en Barcelona como sede de los Juegos Olímpicos. Pues, según destaca el club, se trató de un año emblemático, que trazó la trayectoria deportiva de la ciudad frente al mundo.</i>
+	</div>
 </body>
 </html>
