--- a/Hoja4.html
+++ b/Hoja4.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="CSS/Hoja4_css.css" type="text/css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
 </head>
 <body>
-	<h3>CAMISETA LEVANTE</h3>
-	<img src="imagenes/levante.jpg"><br>
-	<strong>Descripcion</strong><br>
-	<i>La nueva camiseta de la primera equipación del Levante para 2022/23 propone una inspiración que llega de lejos, pues el estilo y el diseño de la prenda evocan una camiseta histórica, la del primer ascenso del club a la Primera División en los años sesenta. Como manda la tradición, protagonizan la camiseta las rayas verticales en azul marino-granate. Dentro de las rayas en azul marino, aparecen en los lados exteriores dos rayas más finas en un azul más claro tono sobre tono</i>
-	<footer><br>		
-		<a href="\PracticaHTML\Hoja1.html">Hoja1</a>&nbsp;
-		<a href="\PracticaHTML\Hoja2.html">Hoja2</a>&nbsp;
-		<a href="\PracticaHTML\Hoja3.html">Hoja3</a>&nbsp;
-		<a href="\PracticaHTML\Hoja5.html">Hoja5</a>&nbsp;
-	</footer>
+	<ul id="cabecera">
+		<li class="boton-menu"><a class="menu" href="Hoja1.html">FORMULARIO</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja2.html">TABLA</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja3.html">BARCELONA</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu active" href="Hoja4.html">LEVANTE UD</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja5.html">ELCHE</a>&nbsp;</li>
+	</ul>
+	<div class="contenedor-pag">
+		<h3>CAMISETA LEVANTE</h3>
+		<img src="imagenes/levante.jpg"><br>
+		<strong>Descripcion</strong><br>
+		<i>La nueva camiseta de la primera equipación del Levante para 2022/23 propone una inspiración que llega de lejos, pues el estilo y el diseño de la prenda evocan una camiseta histórica, la del primer ascenso del club a la Primera División en los años sesenta. Como manda la tradición, protagonizan la camiseta las rayas verticales en azul marino-granate. Dentro de las rayas en azul marino, aparecen en los lados exteriores dos rayas más finas en un azul más claro tono sobre tono</i>
+	</div>
 </body>
 </html>
