--- a/Hoja5.html
+++ b/Hoja5.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="CSS/Hoja5_css.css" type="text/css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
 </head>
 <body>
-	<h3>CAMISETA ELCHE</h3>
-	<img src="imagenes/elche.jpg"><br>
-	<strong>Descripcion</strong><br>
-	<i>La camiseta Nike Dri-FIT Park cuenta con un suave tejido con capilarización del sudor y con malla en la espalda para que mantengas la frescura y la transpirabilidad.<br>
-		Tecnología Dri-FIT para mantener la transpirabilidad y la comodidad.<br>
-		Panel de malla en la espalda para una mayor transpirabilidad.<br>
-		COMODIDAD PARA COMPETIR.<br></i>
-		<a href="\PracticaHTML\Hoja1.html">Hoja1</a>&nbsp;
-		<a href="\PracticaHTML\Hoja2.html">Hoja2</a>&nbsp;
-		<a href="\PracticaHTML\Hoja3.html">Hoja3</a>&nbsp;
-		<a href="\PracticaHTML\Hoja4.html">Hoja4</a>&nbsp;
-
+	<ul id="cabecera">
+		<li class="boton-menu"><a class="menu" href="Hoja1.html">FORMULARIO</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja2.html">TABLA</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja3.html">BARCELONA</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu" href="Hoja4.html">LEVANTE UD</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu active" href="Hoja5.html">ELCHE</a>&nbsp;</li>
+	</ul>
+	<div class="contenedor-pag">
+		<h3>CAMISETA ELCHE</h3>
+		<img src="imagenes/elche.jpg"><br>
+		<strong>Descripcion</strong><br>
+		<i>La camiseta Nike Dri-FIT Park cuenta con un suave tejido con capilarización del sudor y con malla en la espalda para que mantengas la frescura y la transpirabilidad.
+			Tecnología Dri-FIT para mantener la transpirabilidad y la comodidad.<br>
+			Panel de malla en la espalda para una mayor transpirabilidad.<br>
+			COMODIDAD PARA COMPETIR.<br></i>
+	</div>
 </body>
 </html>
