--- a/Hoja3.html
+++ b/Hoja3.html
@@ -5,15 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
+	<script src="JS/nav.js" type="text/javascript"></script>
 </head>
 <body>
-	<ul id="cabecera">
-		<li class="boton-menu"><a class="menu" href="Hoja1.html">FORMULARIO</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu" href="Hoja2.html">TABLA</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu active" href="Hoja3.html">BARCELONA</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu" href="Hoja4.html">LEVANTE UD</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu" href="Hoja5.html">ELCHE</a>&nbsp;</li>
-	</ul>
+	<div id="cabecera"></div>
 	<div class="contenedor-pag">
 		<h3>CAMISETA BARCELONA</h3>
 		<img src="imagenes/barcelona.jpg"><br>
