--- a/Hoja2.html
+++ b/Hoja2.html
@@ -5,48 +5,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
+	<script src="JS/nav.js" type="text/javascript"></script>
 </head>
 <body>
-	<ul id="cabecera">
-		<li class="boton-menu"><a class="menu" href="Hoja1.html">FORMULARIO</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu active" href="Hoja2.html">TABLA</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu" href="Hoja3.html">BARCELONA</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu" href="Hoja4.html">LEVANTE UD</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu" href="Hoja5.html">ELCHE</a>&nbsp;</li>
-	</ul>
+	<div id="cabecera"></div>
 	<div class="contenedor-pag">
 		<h3 id="titulo">HOJA2</h3>
-		<table align="center" border="4">
+		<input type="search" id="buscador">
+		<table align="center" border="4" id="id_tabla">
 			<caption>TABLA DE CLIENTES</caption>
-			<tr>
+			<thead><tr>
 				<th>Nombre</th>
 				<th>Apellidos</th>
 				<th>Telefono</th>
 				<th>Email</th>
 				<th>Sexo</th>
-			</tr>
-			<tr>
-				<td>Juan</td>
-				<td>Sanchez Garcia</td>
-				<td>654456234</td>
-				<td>Juan@gmail.com</td>
-				<td>Hombre</td>
-			</tr>
-			<tr>
-				<td>Antonio</td>
-				<td>Rodriguez Arenas</td>
-				<td>687098123</td>
-				<td>Antonio@gmail.com</td>
-				<td>Hombre</td>
-			</tr>
-			<tr>
-				<td>Pedro</td>
-				<td>Lopez Fernandez</td>
-				<td>609123456</td>
-				<td>Pedro@gmail.com</td>
-				<td>Hombre</td>
-			</tr>
+				<th>Acciones</th>
+			</tr></thead>
+			<tbody id="id_tbody"></tbody>
 		</table>
+		<script src="JS/usuario.js"></script>
 	</div>
 </body>
 </html>
