--- a/Hoja1.html
+++ b/Hoja1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="CSS/Hoja1_css.css" type="text/css">
+	<link rel="stylesheet" href="./CSS/Hoja1_css.css" type="text/css">
+	<link rel="import" href="./nav.html">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
 	<script src="JS/nav.js" type="text/javascript"></script>
+
 </head>
 <body>
 	<div id="cabecera"></div>
