--- a/Hoja2.html
+++ b/Hoja2.html
@@ -11,7 +11,11 @@
 	<div id="cabecera"></div>
 	<div class="contenedor-pag">
 		<h3 id="titulo">HOJA2</h3>
-		<input type="search" id="buscador">
+		<form  method="post">
+			<input type="search" id="buscador" placeholder="Buscador">
+		</form>
+		
+		<br>
 		<table align="center" border="4" id="id_tabla">
 			<caption>TABLA DE CLIENTES</caption>
 			<thead><tr>
@@ -24,7 +28,7 @@
 			</tr></thead>
 			<tbody id="id_tbody"></tbody>
 		</table>
-		<script src="JS/usuario.js"></script>
+		<script type="text/javascript" src="JS/usuario.js"></script>
 	</div>
 </body>
 </html>
