--- a/nav.html
+++ b/nav.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul id="cabecera">
+	<link rel="stylesheet" href="./CSS/Hoja1_css.css" type="text/css">
+	<title>Practica HTML</title>
+</head> 
+	<ul>
 		<li class="boton-menu"><a class="menu" href="Hoja1.html">FORMULARIO</a>&nbsp;</li>
-		<li class="boton-menu"><a class="menu active" href="Hoja2.html">TABLA</a>&nbsp;</li>
+		<li class="boton-menu"><a class="menu " href="Hoja2.html">TABLA</a>&nbsp;</li>
 		<li class="boton-menu"><a class="menu" href="Hoja3.html">BARCELONA</a>&nbsp;</li>
 		<li class="boton-menu"><a class="menu" href="Hoja4.html">LEVANTE UD</a>&nbsp;</li>
 		<li class="boton-menu"><a class="menu" href="Hoja5.html">ELCHE</a>&nbsp;</li>
 	</ul>
-</body>
-</html>
