--- a/Hoja1.html
+++ b/Hoja1.html
@@ -1,63 +1,69 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<link rel="stylesheet" href="./CSS/Hoja1_css.css" type="text/css">
 	<link rel="import" href="./nav.html">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
 	<script src="JS/nav.js" type="text/javascript"></script>
-
+	<script src="JS/formulario.js" type="text/javascript"></script>
+	<script src="node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+	<link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.min.css">
 </head>
+
 <body>
 	<div id="cabecera"></div>
 	<div class="contenedor-pag">
 		<h3>HOJA1</h3>
 		<h2>VENTA DE CAMISETAS</h2>
-		<form action="./WS/crearUsuario.php" method="post">
+		<form method="POST" id="FormularioAlumno">
 			<fieldset>
-				<legend>	 
+				<legend>
 					FORMULARIO
 				</legend>
 				<ul>
 					<li>
 						<label for="Nombre" name="nombre">Nombre:</label>
-						<input class="input-form" type="text" id="Nombre" name="usuario_nombre">
+						<input class="input-form" type="text" id="Nombre" name="nombre">
 					</li>
 					<br>
 					<li>
 						<label for="Apellidos" name="apellidos">Apellidos:</label>
-						<input class="input-form" type="text" id="Apellidos" name="usuario_apellidos">
+						<input class="input-form" type="text" id="Apellidos" name="apellidos">
 					</li>
 					<br>
 					<li>
 						<label for="Contraseña" name="contraseña">Contraseña:</label>
-						<input class="input-form" type="text" id="Contraseña" name="usuario_contraseña">
+						<input class="input-form" type="text" id="Password" name="password">
 					</li>
 					<br>
 					<li>
 						<label for="Telefono" name="telefono">Telefono:</label>
-						<input class="input-form" type="text" id="Telefono" name="usuario_telefono">
+						<input class="input-form" type="text" id="Telefono" name="telefono">
 					</li>
 					<br>
 					<li>
 						<label for="Email" name="email">Email:</label>
-						<input class="input-form" type="text" id="Email" name="usuario_email">
+						<input class="input-form" type="text" id="Email" name="email">
 					</li>
 					<br>
 					<li>
 						<label name="sexo">Sexo:
-							<input type="radio" name="usuario_sexo" value="Hombre"> Hombre
+							<input type="radio" name="sexo" value="M"> Hombre
 						</label>
 						<label>
-							<input type="radio" name="usuario_sexo" value="Mujer"> Mujer
+							<input type="radio" name="sexo" value="F"> Mujer
 						</label>
 					</li>
 				</ul>
-				<button type="submit">Enviar</button>
+				<input type="button" id="enviar" value="Enviar"></input>
 				<button id="Borrar" type="reset">Borrar</button>
 			</fieldset>
 		</form>
-	</div> 
+	</div>
 </body>
+
 </html>
