--- a/Hoja2.html
+++ b/Hoja2.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<link rel="stylesheet" href="CSS/Hoja2_css.css" type="text/css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Practica HTML</title>
 	<script src="JS/nav.js" type="text/javascript"></script>
+	<script src="JS/usuario.js" type="text/javascript"></script>
+	<script src="node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+	<link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.min.css">
 </head>
+
 <body>
 	<div id="cabecera"></div>
 	<div class="contenedor-pag">
 		<h3 id="titulo">HOJA2</h3>
-		<form  method="post">
-			<input type="search" id="buscador" placeholder="Buscador">
+		<form method="post">
+			<input type="search" id="busqueda" onkeyup="buscar()" placeholder="Buscador">
 		</form>
-		
 		<br>
 		<table align="center" border="4" id="id_tabla">
 			<caption>TABLA DE CLIENTES</caption>
-			<thead><tr>
-				<th>Nombre</th>
-				<th>Apellidos</th>
-				<th>Telefono</th>
-				<th>Email</th>
-				<th>Sexo</th>
-				<th>Acciones</th>
-			</tr></thead>
-			<tbody id="id_tbody"></tbody>
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Nombre</th>
+					<th>Apellidos</th>
+					<th>Contraseña</th>
+					<th>Telefono</th>
+					<th>Email</th>
+					<th>Sexo</th>
+					<th>Acciones</th>
+				</tr>
+			</thead>
+			<tbody id="id_tbody">
+
+			</tbody>
 		</table>
 		<script type="text/javascript" src="JS/usuario.js"></script>
 	</div>
 </body>
+
 </html>
